# mounttab

./: .gitignore  Cargo.toml  NEW_DESIGN.md  README.md  browser-tabs.json  build.ts  bun.lockb  package.json
cli/: Cargo.toml
cli/src/: app.rs  browser.rs  browsers.rs  daemon.rs  file_watcher.rs  json_storage.rs  main.rs  model.rs  model2.rs  tab_workspace.rs  web_server.rs  web_server_2.rs
examples/: MountTab.service  rofi.sh
extension/: .gitignore  Cargo.toml  build.ts  bun.lockb  manifest.json  package.json  tsconfig.json
extension/pkg/: background.js  index.js  manifest.json
extension/src/: background.ts  browser_interface.rs  lib.rs  mock.ts  model.ts  popup.html  popup.tsx  types.ts  utils.rs
lib/: Cargo.toml
old_src/: browser.rs  json_storage.rs  main.rs  model.rs
pkg/: background.js
scripts/: mt.sh  socket-test.ts
src/: app.rs  background.ts  browser.rs  browser_interface.rs  cli.ts  config.ts  lib.rs  main.rs  manifest.json  model.rs  server.ts  state.ts  static-config.ts  types.ts  web_server.rs
src/extension/: background.ts  manifest.json  popup.html  popup.tsx
