[package]
name = "tabfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
notify = { version = "6.1.1", features = ["serde"] }
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

