[package]
name = "mounttab"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
futures-util = "0.3.28"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"

