[package]
name = "tabfs-rs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]

futures-util = "0.3.28"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"

